# incopt

./: .gitignore  CMakeLists.txt  README.md  incopt.i  rebuild_all.sh
cpp/: incopt.h
cpp/pushing/constraints/: ConstraintUtils.cpp  ConstraintUtils.h  ContactFactors.h  CorridorFactors.h  DynamicsFactors.h  p_poly_dist.h
cpp/pushing/dataio/: CMakeLists.txt
gtsam/: CMakeLists.txt  gtsam.h  gtsampy.h
gtsam/cmake/: FindTBB.cmake
gtsam/examples/: FixedLagSmootherExample.cpp  Pose2SLAMExample.cpp  VisualISAM2Example.cpp  VisualISAM3Example.cpp  symbolicJunctionTree.cpp  testNumericalDiff.cpp  testSymbolicEliminationTreelocal.cpp  test_fixed_lag_smoother.cpp
gtsam/examples/dataio/: DataLoaderJson.h
gtsam/gtsam/: gtsam.i
gtsam/gtsam/base/: timing.h  treeTraversal-inst.h
gtsam/gtsam/inference/: BayesTreeCliqueBase-inst.h  BayesTreeCliqueBase.h  ClusterTree-inst.h  ClusterTree.h  EliminationTree-inst.h  EliminationTree.h  Factor.h  FactorGraph-inst.h  FactorGraph.h  JunctionTree-inst.h
gtsam/gtsam/linear/: GaussianConditional.cpp  GaussianConditional.h  GaussianEliminationTree.cpp  GaussianEliminationTree.h  HessianFactor.cpp  JacobianFactor.cpp  VectorValues.cpp  VectorValues.h
gtsam/gtsam/nonlinear/: ISAM2.h  (+18 more)
local/datasets/: logFBTraj0.json  logFBTraj2.json  logFBTraj3.json  logFBTraj6.json
python/: .gitignore  README.me  requirements.txt  setup.py
python/config/: arm3_planning_obstacles.yaml  navigation_2D.yaml  push_estimation_pybullet.yaml
python/pybullet-sim-pushing/: pybullet_hello_world.py
wrap/: CMakeLists.txt
wrap/cmake/: GtwrapUtils.cmake
(+33 files in other folders)
